Enforce websocket transport only

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.socket.io/socket.io-1.4.3.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script>
-      var socket = io();
+      var socket = io({ transports: ['websocket'] });
       $('form').submit(function(){
         socket.emit('chat message', $('#m').val());
         $('#m').val('');
